--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,10 @@
 	margin-bottom: 0px;
 }
 
+.wrapper-style4 p strong {
+	color: #999;
+}
+
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
